fix(sass): fix contextual link problem on mobile logged out users

--- a/sass/layouts/_responsive.scss
+++ b/sass/layouts/_responsive.scss
@@ -221,6 +221,7 @@ $zen-auto-include-item-base: false;
   max-width: 100%;
   #content{
     padding: 0;
+    position: relative;
   }
   .full-width-wrapper{
     max-width: 1200px;
